<?xml version="1.0"?>
<package format="2">
  <name>my_turtlebot_sim</name>
  <version>0.0.1</version>
  <description>The my_turtlebot_sim package</description>
  <maintainer email="simon.bracegirdle@mechanicalrock.io">Simon Bracegirdle</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
